--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,67 @@ header {
     margin: 20px;
 }
 
-#newBtn:hover {
+#newBtn:hover, .cardBtn:hover {
     box-shadow: 0px 0px 5px black;
     transition: 0.2s;
+}
+
+.card-el {
+    height: 200px;
+    width: 300px;
+    border-radius: 5px;
+    box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.35);
+    display: flex;
+    flex-direction: column;
+}
+
+#content {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-items: center;
+    grid-gap: 50px;
+    margin-top: 20px;
+}
+
+.card-title, .card-btns {
+    flex: 1;
+    background-color: #bebebe;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-content {
+    flex: 2;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size: 20px;
+}
+
+.card-title {
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+}
+
+span {
+    font-weight: bold;
+}
+
+.cardBtn {
+    margin: 0px 20px;
+    width: 75px;
+    padding: 5px;
+    border-radius: 10px;
+    border: none;
+}
+
+.active {
+    background-color: #43fa65;
+}
+
+.not-active {
+    background-color:#fa969e;
 }
