--- a/styles.css
+++ b/styles.css
@@ -130,7 +130,7 @@ span {
 /* FORM */
 
 form {
-    height: 300px;
+    height: 400px;
     width: 350px;
     box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.35);
     border-radius: 5px;
@@ -203,4 +203,8 @@ label {
 #titleDiv {
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
+}
+
+#isRead {
+    text-align: center;
 }
