--- a/styles.css
+++ b/styles.css
@@ -6,15 +6,18 @@
 
 body {
     background-color: #dedede;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 /* HEADER STYLING */
 
 header {
-    background-color: #bebebe;
+    background-color: #1B4571;
     height: 100px;
     width: 100vw;
-    border-bottom: 1px solid black;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -36,6 +39,30 @@ header {
     justify-content: flex-end;
 }
 
+#img {
+    height: 90%;
+    width: 30%;
+    background-image: url('./logo.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+#loginBtn {
+    padding: 5px 15px;
+    font-size: 18px;
+    color: white;
+    text-shadow: 0px 0px 2px black;
+    border-radius: 10px;
+    border: none;
+    background-color: #D70848;
+}
+
+#loginBtn:hover {
+    background-color: red;
+    transition: 0.3s;
+    box-shadow: 0px 0px 5px black;
+}
 /* NEW BUTTON */
 
 .material-symbols-outlined {
@@ -53,11 +80,18 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #bebebe;
+    background-color: #1B4571;
+    color: white;
+    border: none;
     position: absolute;
     right: 0;
     bottom: 0;
     margin: 20px;
+}
+
+#newBtn:hover {
+    background-color: #0F69C7;
+    transition: 0.3s;
 }
 
 #newBtn:hover, .cardBtn:hover, #addBtn:hover {
@@ -71,6 +105,7 @@ header {
     justify-items: center;
     grid-gap: 50px;
     margin-top: 20px;
+    width: max(1200px, 60%);
 }
 
 /* CARDS */
