--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,10 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'DM Sans', sans-serif;
 }
 
 body {
-    background-color: #dedede;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -16,7 +16,7 @@ body {
 
 header {
     background-color: #1B4571;
-    height: 100px;
+    height: 80px;
     width: 100vw;
     display: flex;
     justify-content: center;
@@ -53,7 +53,7 @@ header {
     font-size: 18px;
     color: white;
     text-shadow: 0px 0px 2px black;
-    border-radius: 10px;
+    border-radius: 5px;
     border: none;
     background-color: #D70848;
 }
@@ -86,7 +86,8 @@ header {
     position: absolute;
     right: 0;
     bottom: 0;
-    margin: 20px;
+    margin-bottom: 50px;
+    margin-right: 20px;
 }
 
 #newBtn:hover {
@@ -106,6 +107,7 @@ header {
     grid-gap: 50px;
     margin-top: 20px;
     width: max(1200px, 60%);
+    background-color: white;
 }
 
 /* CARDS */
@@ -242,4 +244,38 @@ label {
 
 #isRead {
     text-align: center;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    background-color: #dedede;
+    width: 100%;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#left, #right {
+    flex: 1;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+#left {
+    justify-content: flex-end;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+    margin: 0px 10px;
+}
+
+a:hover {
+    text-decoration: underline;
+    transition: 1s;
+    font-size: 18px;
 }
