--- a/styles.css
+++ b/styles.css
@@ -10,17 +10,19 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: #bab3a9;
 }
 
 /* HEADER STYLING */
 
 header {
-    background-color: #1B4571;
+    background-color: #28272a;
     height: 80px;
     width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
+    box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.35);
 }
 #header-container {
     display: flex;
@@ -80,7 +82,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #1B4571;
+    background-color: #28272a;
     color: white;
     border: none;
     position: absolute;
@@ -91,12 +93,12 @@ header {
 }
 
 #newBtn:hover {
-    background-color: #0F69C7;
+    background-color: #000000;
     transition: 0.3s;
 }
 
 #newBtn:hover, .cardBtn:hover, #addBtn:hover {
-    box-shadow: 0px 0px 5px black;
+    box-shadow: 0px 0px 2px black;
     transition: 0.2s;
 }
 
@@ -107,7 +109,7 @@ header {
     grid-gap: 50px;
     margin-top: 20px;
     width: max(1200px, 60%);
-    background-color: white;
+    background-color: #bab3a9;
 }
 
 /* CARDS */
@@ -123,10 +125,20 @@ header {
 
 .card-title, .card-btns {
     flex: 1;
-    background-color: #bebebe;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.card-title {
+    background-color: #28272a;
+    color: white;
+}
+
+.card-btns {
+    background-color: #4b494f;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 .card-content {
@@ -171,7 +183,7 @@ form {
     width: 350px;
     box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.35);
     border-radius: 5px;
-    background-color: white;
+    background-color: whitesmoke;
     position: absolute;
     left: 0;
     right: 0;
@@ -182,13 +194,20 @@ form {
 }
 
 #titleDiv, #btnDiv {
-    flex: 0.5;
-    background-color: #bebebe;
+    flex: 0.3;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 10px;
     position: relative;
+    background-color: #28272a;
+    color: white;
+}
+
+#btnDiv {
+    background-color: #4b494f;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 #inputDiv {
@@ -220,7 +239,15 @@ label {
     font-size: 16px;
     border-radius: 5px;
     border: none;
-    background-color: #43fa65;
+    background-color: #D70848;
+    color: white;
+    text-shadow: 0px 0px 2px black;
+}
+
+#addBtn:hover {
+    background-color: red;
+    transition: 0.3s;
+    box-shadow: 0px 0px 5px black;
 }
 
 #closeBtn {
@@ -229,7 +256,8 @@ label {
     top: 0;
     border: none;
     background: none;
-    color: rgba(0, 0, 0, 0.35);
+    color: whitesmoke;
+    opacity: 70%;
 }
 
 #closeBtn:hover {
@@ -246,10 +274,12 @@ label {
     text-align: center;
 }
 
+/* FOOTER */
+
 footer {
     position: absolute;
     bottom: 0;
-    background-color: #dedede;
+    background-color:#cac3b8;
     width: 100%;
     height: 40px;
     display: flex;
